--- a/emacs.org
+++ b/emacs.org
@@ -531,10 +531,13 @@ fix for cursor color in clients falling back to the default theme [[http:emacs.s
 
 (defun date (&optional arg)
   "Display current date time.
-With default prefix arg (e.g. C-u M-x date), also display calendar around current date.
-With prefix arg of 4 (e.g. C-u 4 M-x date), also prompt for year/month for calendar display."
+With single prefix arg (C-u M-x date), display calendar around current date.
+With extra prefix arg (C-u C-u M-x date), prompt for year & month for calendar."
   (interactive "P")
-  (when arg (calendar (if (equal arg 4) arg nil)))
+  (when arg
+    (pcase (prefix-numeric-value arg)
+      (16 (calendar arg))
+      (_ (calendar))))
   (message (current-time-string)))
 
 (defun iso-date ()
@@ -613,10 +616,10 @@ Interactively:
                                         (s-trim-left (s-chop-prefix "$" (s-trim (thing-at-point 'line t))))
                                       (read-shell-command "Command: "))))))
     (if arg
-        (case (prefix-numeric-value arg)
+        (pcase (prefix-numeric-value arg)
           (16 (save-excursion (open-line-next) (insert (s-trim (shell-command-to-string prepared-cmd)))))
           (64 (cmd-tmux prepared-cmd))
-          (t (message (string-trim (shell-command-to-string prepared-cmd)))))
+          (_ (message (string-trim (shell-command-to-string prepared-cmd)))))
       (cmd prepared-cmd))))
 
 (transient-define-prefix cmd-menu
