--- a/emacs.org
+++ b/emacs.org
@@ -793,17 +793,14 @@ argument makes the windows rotate backwards."
   (interactive)
   (load-file user-init-file))
 
-(defun emacs-archive-packages (&optional rm-elpa-dir)
-  (interactive)
+(defun emacs-archive-packages ()
   (when (f-exists? package-user-dir)
     (let ((archive-dir (format "/tmp/emacs-elpa--%s" (jw--iso-current-time-string))))
-      (if rm-elpa-dir
-          (f-move package-user-dir archive-dir)
-        (f-copy package-user-dir archive-dir)))))
+      (f-move package-user-dir archive-dir))))
 
 (defun emacs-archive-packages-and-die ()
   (interactive)
-  (emacs-archive-packages 'rm-elpa-dir)
+  (emacs-archive-packages)
   (life-is-too-much))
 
 (defun emacs-byte-compile-elpa-package-files ()
