--- a/emacs.org
+++ b/emacs.org
@@ -1148,7 +1148,11 @@ If the server is connected and a prefix arg is provided, then invoke a quick /ms
 
 (defun jw-todo-backup ()
   (interactive)
-  (cmd "todo-backup"))
+  (jw--run-cmd "todo-backup" nil nil nil
+               (lambda (proc) ;; after-process-finish
+                 (switch-to-buffer (other-buffer))
+                 (bury-buffer (process-buffer proc))
+                 (message "Command jw-todo-backup finished"))))
 
 (setq jw-org-agenda-pre-hook nil)
 
