--- a/emacs.org
+++ b/emacs.org
@@ -412,6 +412,8 @@ fix for cursor color in clients falling back to the default theme [[http:emacs.s
 (add-to-list 'auto-mode-alist '("Berksfile$" . ruby-mode))
 (add-to-list 'auto-mode-alist '("\\.irbrc$" . ruby-mode))
 
+(setq ruby-insert-encoding-magic-comment nil)
+
 ;; (add-hook 'text-mode-hook 'flyspell-mode) ;; i don't use this
 
 (setq ediff-window-setup-function 'ediff-setup-windows-plain)
