--- a/emacs.org
+++ b/emacs.org
@@ -1317,6 +1317,7 @@ org-babel languages & automatic yasnippet creation
 (org-babel-src-yasnippet 'gfm)
 (org-babel-src-yasnippet 'conf)
 (org-babel-src-yasnippet 'text)
+(org-babel-src-yasnippet 'yaml)
 (org-babel-src-yasnippet 'json 'js)
 (org-babel-src-yasnippet 'javascript 'js)
 
