Better cheat.sh completing-read

--- a/emacs.org
+++ b/emacs.org
@@ -572,15 +572,20 @@ With extra prefix arg (C-u C-u M-x date), prompt for year & month for calendar."
          (query (s-replace "\s" "+" (s-trim raw-query))))
     (jw--run-cmd (format "curl http://wttr.in/%s" query))))
 
+(setq cheat-sh-candidates nil)
 (defun cheat-sh (&optional arg)
   (interactive "P")
   (let* ((raw-query
-          (if (region-active-p)
-              (buffer-substring-no-properties (region-beginning) (region-end))
-            (pcase (prefix-numeric-value arg)
-              (16 ":help")
-              (4 ":list")
-              (_ (read-string "Command (git/ln/:help/:list/~search/etc or /python & /python/:learn & python/quicksort) - curl cheat.sh/")))))
+          (pcase (prefix-numeric-value arg)
+            (16 ":help")
+            (4 ":list")
+            (_ (let ((candidates (progn (when (not cheat-sh-candidates)
+                                          (message "Caching cheat.sh candidates list…")
+                                          (setq cheat-sh-candidates (process-lines "curl" "--silent" "http://cheat.sh/:list")))
+                                        cheat-sh-candidates))
+                     (initial (if (region-active-p) (buffer-substring-no-properties (region-beginning) (region-end)) nil)))
+                 (completing-read "curl http://cheat.sh/" candidates nil nil initial)))
+            ))
          (query (s-replace "\s" "+" (s-trim raw-query))))
     (jw--run-cmd (format "curl http://cheat.sh/%s" query))))
 
